feat: add get and search role endpoints